--- a/src/style/style.css
+++ b/src/style/style.css
@@ -13,6 +13,7 @@ body {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 input,
@@ -21,7 +22,98 @@ button {
   border: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 ul,
 li {
   list-style: none;
 }
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-start {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+} 
+
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+} 
+
+.flex-end {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.main-section {
+  width: 100%;
+}
+
+.main-section h1 {
+  margin: 4rem 0 0 10rem;
+}
+.main-container-section {
+  width: 100%;
+  height: 100%;
+}
+
+.main-wrapper {
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 6rem;
+  align-items: flex-start;
+}
+
+.main-left-wrappe {
+  width: 50%;
+  flex-direction: column;
+}
+
+.refresh-container {
+  width: 100%;
+}
+
+.refresh-container p {
+  margin-right: 2rem;
+  font-size: 1.8rem;
+}
+
+.refresh-container button {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+}
+
+.scores-list {
+  width: 100%;
+  flex-direction: column;
+  margin-top: 2rem;
+  border: 1px solid #ccc;
+}
+
+.scores-list li {
+  width: 100%;
+  padding: 1rem 0 1rem 1rem;
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+}
+
+.scores-list li span:last-child {
+  margin-left: 1rem;
+  font-weight: bold;
+}
+
+.scores-list li:nth-child(2n-1) {
+  background-color: rgb(221, 221, 221);
+}
+
