--- a/src/style/style.css
+++ b/src/style/style.css
@@ -117,3 +117,35 @@ li {
   background-color: rgb(221, 221, 221);
 }
 
+.main-right-wrapper {
+  width: 40%;
+  margin-left: 5rem;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.main-right-wrapper h2 {
+  margin-bottom: 2rem;
+  font-style: italic;
+}
+
+.main-right-wrapper #add-score {
+  flex-direction: column;
+  width: 100%;
+}
+
+.main-right-wrapper #add-score input {
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+}
+
+.main-right-wrapper #add-score button {
+  padding: 0.6rem 1.5rem;
+  background-color: rgb(122, 121, 121);
+  color: #fff;
+  font-size: 1rem;
+  align-self: flex-end;
+}
