Render scores on the refresh button.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -70,8 +70,7 @@ li {
 
 .main-wrapper {
   width: 80%;
-  margin: 0 auto;
-  margin-top: 6rem;
+  margin: 6rem auto;
   align-items: flex-start;
 }
 
