Add btns background

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -91,6 +91,9 @@ li {
 .refresh-container button {
   padding: 0.5rem 1rem;
   font-size: 1rem;
+  background-color: rgba(0, 0, 255, 0.548);
+  border-radius: 0.5rem;
+  color: #fff;
 }
 
 .scores-list {
@@ -144,10 +147,11 @@ li {
 
 .main-right-wrapper #add-score button {
   padding: 0.6rem 1.5rem;
-  background-color: rgb(122, 121, 121);
+  background-color: rgba(0, 0, 255, 0.548);
   color: #fff;
   font-size: 1rem;
   align-self: flex-end;
+  border-radius: 0.5rem;
 }
 
 @media screen and (max-width:900px) {
