Add the li background color.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -101,6 +101,9 @@ li {
   flex-direction: column;
   margin-top: 2rem;
   border: 1px solid #ccc;
+  border-radius: 0.5rem;
+  
+
 }
 
 .scores-list li {
@@ -109,6 +112,8 @@ li {
   border-bottom: 1px solid #ccc;
   display: flex;
   align-items: center;
+  background-color: #bdd4e7;
+  background-image: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%);
 }
 
 .scores-list li span:last-child {
