--- a/src/style/style.css
+++ b/src/style/style.css
@@ -69,6 +69,9 @@ li {
 
 .main-section h1 {
   margin: 4rem 0 0 10rem;
+  font-size: 2.8rem;
+  font-weight: 800;
+  color: #fff;
 }
 
 .main-container-section {
