--- a/src/style/style.css
+++ b/src/style/style.css
@@ -32,8 +32,30 @@ button {
   font-size: 1rem;
   align-self: flex-end;
   border-radius: 0.5rem;
+  position: relative;
+  z-index: 1;
 }
 
+button::before {
+  position: absolute;
+  top: 0;
+   left: 0;
+            right: 0;
+            bottom: 0;
+            content: "";
+            border-radius: 0.5rem;
+            /* background-color: lighten($black-ground-color, 90); */
+            background-color: #6a93cb;
+background-image: linear-gradient(315deg, #6a93cb 0%, #a4bfef 74%);
+            transition: transform 700ms;
+            transform-origin: left;
+            transform: scaleX(0);
+            z-index: -1;
+}
+
+button:hover::before {
+  transform: scaleX(1);
+}
 ul,
 li {
   list-style: none;
@@ -97,6 +119,7 @@ li {
 .refresh-container p {
   margin-right: 2rem;
   font-size: 1.8rem;
+  color: #fff;
 }
 
 .refresh-container button {
@@ -107,7 +130,7 @@ li {
   width: 100%;
   flex-direction: column;
   margin-top: 2rem;
-  border: 1px solid #ccc;
+  border: 3px solid #ccc;
   border-radius: 0.5rem;
   
 
@@ -119,9 +142,10 @@ li {
   border-bottom: 1px solid #ccc;
   display: flex;
   align-items: center;
-  background-color: #bdd4e7;
-  background-image: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%);
-  border-radius: 0.5rem;
+  background-color: #8989bb;
+  background-image: linear-gradient(315deg, #8989bb 0%, #a5a4cb 74%);
+  border-top-left-radius: 0rem;
+  border-top-right-radius: 0rem;
 }
 
 .scores-list li span {
@@ -135,7 +159,10 @@ li {
 }
 
 .scores-list li:nth-child(2n-1) {
-  background-color: rgb(221, 221, 221);
+  background-color: #abe9cd;
+  background-image: linear-gradient(315deg, #abe9cd 0%, #3eadcf 74%);
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
 }
 
 .main-right-wrapper {
@@ -148,6 +175,7 @@ li {
 .main-right-wrapper h2 {
   margin-bottom: 2rem;
   font-style: italic;
+  color: #fff;
 }
 
 .main-right-wrapper #add-score {
