--- a/src/style/style.css
+++ b/src/style/style.css
@@ -138,7 +138,7 @@ li {
 
 .scores-list li {
   width: 100%;
-  padding: 1rem 0 1rem 1rem;
+  padding: 0.5rem 0 0.5rem 1rem;
   border-bottom: 1px solid #ccc;
   display: flex;
   align-items: center;
@@ -163,6 +163,16 @@ li {
   background-image: linear-gradient(315deg, #abe9cd 0%, #3eadcf 74%);
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
+}
+
+.avatar {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+}
+
+.avatar img {
+  width: 100%;
 }
 
 .main-right-wrapper {
