--- a/src/style/style.css
+++ b/src/style/style.css
@@ -132,8 +132,6 @@ li {
   margin-top: 2rem;
   border: 3px solid #ccc;
   border-radius: 0.5rem;
-  
-
 }
 
 .scores-list li {
@@ -144,8 +142,8 @@ li {
   align-items: center;
   background-color: #8989bb;
   background-image: linear-gradient(315deg, #8989bb 0%, #a5a4cb 74%);
-  border-top-left-radius: 0rem;
-  border-top-right-radius: 0rem;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .scores-list li span {
