Put the main title responsible

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -207,6 +207,12 @@ li {
   .main-wrapper {
     flex-direction: column;
   }
+  
+  .main-section h1 {
+    margin: 0;
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
 
   .main-left-wrappe {
     width: 100%;
